--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="flex_ass.css">
+    <link rel="stylesheet" href="flex.css">
   </head>
   <body>
     <main>
       <div class="first">
-        <img src="icon-sedans.svg" alt="">
+        <img src="./images/icon-sedans.svg" alt="">
         <h2>Sedans</h2>
         <p>
           Choose a sedan for its affordability and excellent fuel economy.Ideal
@@ -19,7 +19,7 @@
         <a href="#">Learn More</a>
       </div>
       <div class="second">
-        <img src="icon-suvs.svg" alt="">
+        <img src="./images/icon-suvs.svg" alt="">
         <h2>SUVS</h2>
         <p>
           Take an SUV for its spacious interior,power,and versatility. Perfect
@@ -28,7 +28,7 @@
         <a href="#">Learn More</a>
       </div>
       <div class="third">
-        <img src="icon-luxury.svg" alt="">
+        <img src="./images/icon-luxury.svg" alt="">
         <h2>LUXURY</h2>
         <p>
           Cruise in the best car brands without the bloated prices.Enjoy the
@@ -37,5 +37,9 @@
         <a href="#">Learn More</a>
       </div>
     </main>
+
+
+
+    <a href="./learning grid/grid.html">Link to Grid assignment</a>
   </body>
 </html>
