--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <h1>
-      <a href="./learning grid/grid.html">Link to Grid assignment</a>
+      <a style="color: black" href="./learning grid/grid.html"
+        >Link to Grid assignment</a
+      >
     </h1>
     <main>
       <div class="first">
