flexbox and grids

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>
-      <a style="color: black" href="./learning grid/grid.html"
+      <a style="color: black" href="./learning-grid/grid.html"
         >Link to Grid assignment</a
       >
     </h1>
